# flake8-agents

./: .flake8  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  pyrefly.toml  ruff.toml  tox.ini
.github/workflows/: publish.yaml  test.yaml
.omp/: lsp.yaml  mcp.json
openspec/changes/archive/2026-05-27-gate-agt106-by-python-version/: design.md  tasks.md
openspec/changes/archive/2026-05-27-gate-agt106-by-python-version/specs/type-escape-flake8-rules/: spec.md
openspec/changes/archive/2026-05-28-consolidate-spec-agent-guidance/: design.md  tasks.md
openspec/changes/archive/2026-05-28-consolidate-spec-agent-guidance/specs/import-boundary-flake8-rules/: spec.md
openspec/changes/archive/2026-05-28-consolidate-spec-agent-guidance/specs/module-size-cli/: spec.md
openspec/changes/archive/2026-05-28-consolidate-spec-agent-guidance/specs/repository-quality-guardrails/: spec.md
openspec/changes/archive/2026-05-28-consolidate-spec-agent-guidance/specs/spec-agent-guidance-governance/: spec.md
openspec/changes/archive/2026-05-28-consolidate-spec-agent-guidance/specs/type-escape-flake8-rules/: spec.md
openspec/changes/archive/2026-05-28-consolidate-spec-agent-guidance/specs/ylw-suppression-hygiene/: spec.md
openspec/changes/consolidate-spec-agent-guidance/: design.md  proposal.md  tasks.md
openspec/changes/consolidate-spec-agent-guidance/specs/anti-pattern-flake8-rules/: spec.md
openspec/changes/consolidate-spec-agent-guidance/specs/module-size-cli/: spec.md
openspec/changes/consolidate-spec-agent-guidance/specs/spec-agent-guidance-governance/: spec.md
openspec/changes/consolidate-spec-agent-guidance/specs/type-escape-flake8-rules/: spec.md
openspec/changes/consolidate-spec-agent-guidance/specs/ylw-suppression-hygiene/: spec.md
openspec/changes/gate-agt106-by-python-version/: proposal.md  tasks.md
openspec/specs/anti-pattern-flake8-rules/: spec.md
openspec/specs/audited-guard-exceptions/: spec.md
openspec/specs/bilingual-code-documentation/: spec.md
openspec/specs/canonical-interface-contracts/: spec.md
openspec/specs/cli-help-presentation/: spec.md
openspec/specs/cli-logging-control/: spec.md
openspec/specs/cli-module-organization/: spec.md
openspec/specs/cli-tabular-output/: spec.md
openspec/specs/freethread-script-guard-concurrency/: spec.md
openspec/specs/import-boundary-flake8-rules/: spec.md
openspec/specs/layered-exception-organization/: spec.md
openspec/specs/module-size-cli/: spec.md
openspec/specs/performance-optimization-boundaries/: spec.md
openspec/specs/python-export-boundaries/: spec.md
openspec/specs/quality-guard-fast-paths/: spec.md
openspec/specs/repository-quality-guardrails/: spec.md
openspec/specs/self-return-typing/: spec.md
openspec/specs/spec-agent-guidance-governance/: spec.md
openspec/specs/tooling-path-resolution/: spec.md
openspec/specs/type-escape-flake8-rules/: spec.md
openspec/specs/typed-data-flow-boundaries/: spec.md
openspec/specs/ylw-suppression-hygiene/: spec.md
src/flake8_agents/: __init__.py  _version_.py  anti_pattern.py  checker.py  import_boundary.py  type_escape.py
src/flake8_agents/cli/: __init__.py  module_size.py
src/tests/: AGENTS.md  __init__.py  conftest.py  test_anti_pattern.py  test_checker.py  test_import_boundary.py  test_init.py  test_type_escape.py
src/tests/cli/: __init__.py  test_module_size.py
